docker is running marketdata